# project-ult-assembly

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MODULE_REGISTRY.md  Makefile  README.md  compatibility-matrix.yaml  module-registry.yaml  pyproject.toml
bundles/: README.md  dagster.yaml  feast.yaml  grafana.yaml  kafka-flink.yaml  minio.yaml  neo4j.yaml  postgres.yaml  superset.yaml  temporal.yaml
compose/: full-dev.yaml  lite-local.yaml
compose/dagster/: Dockerfile  dagster.yaml  workspace.yaml
docs/: PROFILE_COMPARISON.md  PROGRESS.md  PUBLIC_ENTRYPOINTS.md  STARTUP_GUIDE.md  TASK_BREAKDOWN.md  TROUBLESHOOTING.md  VERSION_LOCK.md  assembly.project-doc.md
profiles/: README.md  full-dev.yaml  lite-local-readonly-ui.yaml  lite-local.yaml
reports/bootstrap/: full-dev-bootstrap-plan.json  lite-local-bootstrap-plan.json
reports/contract/: contract-lite-local-readonly-ui-20260427T053406120916Z.json  contract-lite-local-readonly-ui-20260427T053413006335Z.json  contract-lite-local-readonly-ui-20260427T053424928510Z.json
reports/e2e/: e2e-lite-local-readonly-ui-20260427T053406092429Z.json
reports/smoke/: frontend-api-api1-public-smoke-20260425.md  frontend-api-api2a-readonly-no-source-smoke-20260425.md  frontend-api-api2b-artifact-success-smoke-20260425.md  frontend-api-api2c-readonly-legacy-pages-smoke-20260425.md  frontend-api-api2d-readonly-polish-smoke-20260425.md  (+11 more)
scripts/: p2_durable_real_data_codex_dry_run.py  production_daily_cycle_proof.py  stage_3_compat_audit.py
src/assembly/: __init__.py  public.py
tests/: test_runtime_registry_resolution.py
(+248 files in other folders)
